Edit controller, passwordEncoder has been moved to service

--- a/src/main/webapp/WEB-INF/views/users/show.html
+++ b/src/main/webapp/WEB-INF/views/users/show.html
@@ -22,8 +22,8 @@
         <td th:text="${user.getName()}">name</td>
         <td th:text="${user.getAge()}">age</td>
         <td th:text="${user.getEmail()}">email</td>
-        <td th:text="${user.getLogin()}">roles</td>
-        <td th:text="${user.getPassword()}">roles</td>
+        <td th:text="${user.getLogin()}">login</td>
+        <td th:text="${user.getPassword()}">password</td>
     </tr>
 </table>
 
